src/objects/OpportunityLineItemCustomFieldHistory__c.object
<CustomObject>
    <description>see apex for
//start feature run_a7z3s0000004sgiaam_once_in_opportunitylineitem_contexts_to_track_arr_field_history_as_a_workaround_for_sfdc_ga_limitation_ideaview_0873a000000e8ccqas

Todo:Spring&apos;21 add &quot;OppLineLkup&quot; field to this object, so that we can add second grouping to https://neo4j.my.salesforce.com/00O4o000004Nzdr , possible in Spring&apos;21 because https://releasenotes.docs.salesforce.com/en-us/spring21/release-notes/rn_sales_features_core_opportunities_line_item_lookup.htm solves https://trailblazer.salesforce.com/ideaView?id=08730000000BrfaAAC</description>
    <fields>
        <fullName>Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityLineItemCustomFieldHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_Date_Time__c</fullName>
        <label>Edited on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItem_Record_Id__c</fullName>
        <label>OLI/PLI Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not required, but history tracked.  By design What to do if the lookup record is deleted?	is set to Clear the value of this field.</inlineHelpText>
        <label>OpportunityLkup</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OpportunityLineItemCustomFieldHistories</relationshipLabel>
        <relationshipName>OpportunityLineItemCustomFieldHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>current_value__c</fullName>
        <label>new value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>developer_note__c</fullName>
        <description>sfdc-0145. The reason for the row insert. Helps troubleshoot any questions. Length follows what apex may write into it.</description>
        <label>developer note</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field_name__c</fullName>
        <inlineHelpText>field name (only tracks ARR__c)</inlineHelpText>
        <label>field name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>object_name__c</fullName>
        <label>sObject API</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>previous_value__c</fullName>
        <label>previous value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>OpportunityLineItemCustomFieldHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>previous_value__c</columns>
        <columns>current_value__c</columns>
        <columns>developer_note__c</columns>
        <columns>field_name__c</columns>
        <columns>OpportunityId__c</columns>
        <columns>OpportunityLineItem_Record_Id__c</columns>
        <columns>OpportunityLookup__c</columns>
        <columns>object_name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OLICFH-{0000}</displayFormat>
        <label>OpportunityLineItemHistoryTrackingCustom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunityLineItemCustomFieldHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>